--- a/src/view/board.fxml
+++ b/src/view/board.fxml
@@ -29,7 +29,7 @@
             <Label layoutX="14.0" layoutY="125.0" prefHeight="25.0" prefWidth="75.0" text="Input File:" />
             <TextField fx:id="_tfGameNumber" layoutX="130.0" layoutY="67.0" prefHeight="25.0" prefWidth="155.0" promptText="A number" />
             <TextField fx:id="_tfInputFile" layoutX="130.0" layoutY="122.0" prefHeight="25.0" prefWidth="155.0" promptText="File path" />
-            <Button fx:id="_btRun" layoutX="230.0" layoutY="165.0" mnemonicParsing="false" onAction="#onClickRun" text="Run" />
+            <Button fx:id="_btRun" layoutX="230.0" layoutY="165.0" mnemonicParsing="false" onAction="#onClickRun" styleClass="buttonS" text="Run" />
          </children>
       </Pane>
       <TextArea fx:id="_taLog" editable="false" layoutX="704.0" layoutY="275.0" prefHeight="470.0" prefWidth="300.0" styleClass="textArea" />
