--- a/src/view/rank.fxml
+++ b/src/view/rank.fxml
@@ -214,8 +214,8 @@
             <Label alignment="CENTER" onMouseClicked="#onClickCouple" prefHeight="42.0" prefWidth="53.0" text="22" textAlignment="JUSTIFY" GridPane.columnIndex="12" GridPane.rowIndex="12" />
          </children>
       </GridPane>
-      <TextArea fx:id="_taLog" editable="false" layoutX="810.0" layoutY="372.0" prefHeight="450.0" prefWidth="250.0" styleClass="textArea" wrapText="true" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="25.0" />
-      <Pane layoutX="749.0" layoutY="25.0" prefHeight="240.0" prefWidth="250.0" styleClass="controlPane" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
+      <TextArea fx:id="_taLog" editable="false" layoutX="749.0" layoutY="415.0" prefHeight="336.0" prefWidth="250.0" styleClass="textArea" wrapText="true" AnchorPane.bottomAnchor="17.0" AnchorPane.rightAnchor="25.0" />
+      <Pane layoutX="749.0" layoutY="31.0" prefHeight="344.0" prefWidth="250.0" styleClass="controlPane" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="31.0">
          <children>
             <Label alignment="CENTER" layoutY="8.0" prefHeight="30.0" prefWidth="250.0" text="Control Panel">
                <font>
@@ -223,29 +223,21 @@
                </font>
             </Label>
             <Separator layoutX="-1.0" layoutY="36.0" prefHeight="3.0" prefWidth="250.0" />
-            <Button fx:id="_btAll" layoutX="145.0" layoutY="90.0" mnemonicParsing="false" onAction="#onClickSelectAll" styleClass="buttonControl" text="Select All" />
-            <Button layoutX="145.0" layoutY="130.0" mnemonicParsing="false" onAction="#onClickClearAll" prefHeight="31.0" prefWidth="80.0" styleClass="buttonControl" text="Clear All" />
-            <Button layoutX="185.0" layoutY="180.0" mnemonicParsing="false" onAction="#onClickGenerate" styleClass="buttonS" text="Run" />
+            <Button fx:id="_btAll" layoutX="145.0" layoutY="50.0" mnemonicParsing="false" onAction="#onClickSelectAll" styleClass="buttonControl" text="Select All" />
+            <Button layoutX="145.0" layoutY="90.0" mnemonicParsing="false" onAction="#onClickClearAll" prefHeight="31.0" prefWidth="80.0" styleClass="buttonControl" text="Clear All" />
+            <Button layoutX="182.0" layoutY="142.0" mnemonicParsing="false" onAction="#onClickGenerate" styleClass="buttonS" text="Run" />
             <Button fx:id="_btSuited" layoutX="15.0" layoutY="90.0" mnemonicParsing="false" onAction="#onClickSuited" styleClass="buttonControl" text="Suited" />
             <Button fx:id="_btBroadway" layoutX="15.0" layoutY="50.0" mnemonicParsing="false" onAction="#onClickBroadway" styleClass="buttonControl" text="Broadway" />
             <Button fx:id="_btPairs" layoutX="15.0" layoutY="130.0" mnemonicParsing="false" onAction="#onClickPairs" styleClass="buttonControl" text="Pairs" />
-         </children>
-      </Pane>
-      <Pane layoutX="45.0" layoutY="562.0" prefHeight="151.0" prefWidth="589.0" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="25.0">
-         <children>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#45c921" focusTraversable="true" height="150.0" layoutY="1.0" opacity="0.63" stroke="BLACK" strokeType="INSIDE" width="588.0" />
-            <Label layoutX="72.0" layoutY="14.0" text="Hand Distribution">
+            <TextField fx:id="_handDistributionText" layoutX="14.0" layoutY="243.0" onKeyPressed="#onEnterPressed" prefHeight="25.0" prefWidth="207.0" />
+            <Label layoutX="68.0" layoutY="198.0" text="Hand Distribution">
                <font>
                   <Font name="System Bold Italic" size="15.0" />
                </font>
             </Label>
-            <TextField fx:id="_handDistributionText" layoutX="23.0" layoutY="44.0" onKeyPressed="#onEnterPressed" prefHeight="25.0" prefWidth="541.0" />
-            <Separator layoutX="1.0" layoutY="34.0" prefHeight="3.0" prefWidth="588.0" />
-            <Button fx:id="_btShowRank" layoutX="480.0" layoutY="87.0" mnemonicParsing="false" onAction="#onClickShowRank" prefHeight="50.0" prefWidth="84.0" text="Show rank" />
+            <Button fx:id="_btShowRank" layoutX="182.0" layoutY="279.0" maxHeight="93.0" maxWidth="96.0" mnemonicParsing="false" onAction="#onClickShowRank" prefHeight="93.0" prefWidth="96.0" styleClass="buttonS" text="Show" />
+            <Separator layoutY="225.0" prefHeight="3.0" prefWidth="250.0" />
          </children>
-         <cursor>
-            <Cursor fx:constant="TEXT" />
-         </cursor>
       </Pane>
    </children>
 </AnchorPane>
