--- a/src/view/pokerStyle.css
+++ b/src/view/pokerStyle.css
@@ -63,8 +63,22 @@
     -fx-background-color: #66BB6A;
 }
 
-.selectedCell{
+.selected{
     -fx-background-color: #FFEE58;
+}
+
+.selectedLabel{
+    -fx-border-width: 2;
+    -fx-border-color: #4CAF50;
+}
+
+.noneSelected{
+    -fx-background-color: #E8F5E9;
+}
+
+.roundLabel{
+    -fx-border-radius: 15 15 0 0;
+    -fx-background-radius: 15 15 0 0;
 }
 
 .error{
@@ -106,3 +120,4 @@
 .rowCrads{
     -fx-effect: dropshadow(gaussian, #bdbdbd, 10, 0.5, -4, 7);
 }
+
