--- a/src/view/range.fxml
+++ b/src/view/range.fxml
@@ -20,7 +20,7 @@
 <AnchorPane prefHeight="864.0" prefWidth="1152.0" stylesheets="@pokerStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.range.RangeController">
    <children>
       <GridPane fx:id="_gpCouples" gridLinesVisible="true" prefHeight="500.0" prefWidth="689.0" styleClass="gridPane" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="25.0">
-        <columnConstraints>
+         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="174.0" minWidth="10.0" prefWidth="174.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="174.0" minWidth="10.0" prefWidth="174.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="174.0" minWidth="10.0" prefWidth="174.0" />
@@ -32,10 +32,10 @@
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="174.0" minWidth="10.0" prefWidth="174.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="174.0" minWidth="10.0" prefWidth="174.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="174.0" minWidth="10.0" prefWidth="174.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="174.0" minWidth="10.0" prefWidth="174.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="252.0" minWidth="10.0" prefWidth="173.0" />
-        </columnConstraints>
-        <rowConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="174.0" minWidth="10.0" prefWidth="174.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="252.0" minWidth="10.0" prefWidth="173.0" />
+         </columnConstraints>
+         <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -46,10 +46,10 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
          <children>
             <Label alignment="CENTER" onMouseClicked="#onClickCouple" prefHeight="42.0" prefWidth="53.0" text="AA" textAlignment="JUSTIFY" GridPane.columnIndex="0" GridPane.rowIndex="0" />
             <Label alignment="CENTER" onMouseClicked="#onClickCouple" prefHeight="42.0" prefWidth="53.0" text="AKs" textAlignment="JUSTIFY" GridPane.columnIndex="1" GridPane.rowIndex="0" />
@@ -246,24 +246,24 @@
       <Slider fx:id="_slider" blockIncrement="1.0" layoutX="137.0" layoutY="539.0" min="1.0" onMouseReleased="#onMouseReleased" prefWidth="625.0" AnchorPane.bottomAnchor="287.0" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="539.0" />
       <TextField fx:id="_tfRang" alignment="CENTER" layoutX="654.0" layoutY="543.0" onAction="#onActionRangeText" prefHeight="25.0" prefWidth="60.0" text="0%" />
       <GridPane hgap="2.0" layoutX="25.0" layoutY="588.0" maxWidth="689.0" minWidth="689.0" styleClass="rowCrads" AnchorPane.bottomAnchor="195.0" AnchorPane.leftAnchor="25.0">
-        <columnConstraints>
-           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
          <children>
             <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#onClickCardH" styleClass="hearts" text="Ah" />
             <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#onClickCardH" styleClass="hearts" text="Kh" GridPane.columnIndex="1" />
@@ -386,5 +386,17 @@
          </rowConstraints>
       </GridPane>
       <Button fx:id="_btStats" layoutX="714.0" layoutY="744.0" mnemonicParsing="false" onAction="#onClickStats" text="Stats" AnchorPane.bottomAnchor="88.0" AnchorPane.leftAnchor="723.0" />
+      <Label fx:id="_lbSklansky" alignment="CENTER" layoutX="750.0" layoutY="121.0" onMouseClicked="#onClickRanking" prefHeight="35.0" prefWidth="120.0" rotate="90.0" text="Sklansky" AnchorPane.leftAnchor="672.0" AnchorPane.topAnchor="67.0">
+         <styleClass>
+            <String fx:value="selectedLabel" />
+            <String fx:value="roundLabel" />
+         </styleClass>
+      </Label>
+      <Label fx:id="_lbStrength" alignment="CENTER" layoutX="760.0" layoutY="131.0" onMouseClicked="#onClickRanking" prefHeight="35.0" prefWidth="120.0" rotate="90.0" text="Strength" AnchorPane.leftAnchor="672.0" AnchorPane.topAnchor="187.0">
+         <styleClass>
+            <String fx:value="noneSelected" />
+            <String fx:value="roundLabel" />
+         </styleClass>
+      </Label>
    </children>
 </AnchorPane>
