--- a/src/view/pokerStyle.css
+++ b/src/view/pokerStyle.css
@@ -7,6 +7,26 @@
     -fx-border-color: #FAFAFA #FAFAFA #FAFAFA #4CAF50;
     -fx-effect: dropshadow(gaussian, #bdbdbd, 5, 0.3, 2, 4);
     -fx-background-radius: 3;
+    -fx-border-radius: 3;
+}
+
+.basicPane{
+	-fx-background-color: #FAFAFA;
+    -fx-effect: dropshadow(gaussian, #bdbdbd, 5, 0.3, 2, 4);
+    -fx-background-radius: 3;
+    -fx-border-radius: 3;
+}
+
+.playerPane{
+    -fx-border-color: #424242;
+    -fx-background-color: #FAFAFA;
+    -fx-effect: dropshadow(gaussian, #424242, 5, 0.3, 2, 4);
+    -fx-background-radius: 3;
+    -fx-border-radius: 3;
+}
+
+.boardCardsHB{
+    -fx-border-color: #424242;
 }
 
 .buttonS{
