--- a/src/view/cardSelector.fxml
+++ b/src/view/cardSelector.fxml
@@ -17,7 +17,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="567.0" prefWidth="1024.0" stylesheets="@pokerStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <GridPane fx:id="_cardGrid" layoutX="14.0" prefHeight="499.0" prefWidth="1010.0">
+      <GridPane fx:id="_cardGrid" AnchorPane.bottomAnchor="90.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -39,11 +39,8 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
-         <children>
-            <ImageView fitHeight="109.0" fitWidth="71.0" pickOnBounds="true" preserveRatio="true" />
-         </children>
       </GridPane>
-      <Button fx:id="_acceptButton" layoutX="256.0" layoutY="520.0" mnemonicParsing="false" onMouseClicked="#onClickAccept" prefHeight="25.0" prefWidth="168.0" text="Accept" AnchorPane.leftAnchor="256.0" />
-      <Button fx:id="_cancelButton" layoutX="494.0" layoutY="520.0" mnemonicParsing="false" onMouseClicked="#onClickCancel" prefHeight="25.0" prefWidth="168.0" text="Cancel" />
+      <Button fx:id="_acceptButton" layoutX="256.0" layoutY="520.0" mnemonicParsing="false" onMouseClicked="#onClickAccept" prefHeight="25.0" prefWidth="168.0" text="Accept" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="256.0" />
+      <Button fx:id="_cancelButton" layoutX="494.0" layoutY="520.0" mnemonicParsing="false" onMouseClicked="#onClickCancel" prefHeight="25.0" prefWidth="168.0" text="Cancel" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="256.0" />
    </children>
 </AnchorPane>
