--- a/src/view/playerPane.fxml
+++ b/src/view/playerPane.fxml
@@ -9,8 +9,8 @@
 
 <AnchorPane fx:id="_playerAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="145.0" prefWidth="140.0" styleClass="playerPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.equity.PlayerController">
    <children>
-      <ImageView fx:id="_ivCard1" fitHeight="80.0" fitWidth="65.0" onMouseClicked="#onClickCard" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="0.0" />
-      <ImageView fx:id="_ivCard2" fitHeight="80.0" fitWidth="60.0" layoutX="10.0" layoutY="10.0" onMouseClicked="#onClickCard" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="75.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="0.0" />
+      <ImageView fx:id="_ivCard1" fitHeight="80.0" fitWidth="65.0" onMouseClicked="#onClickCard" pickOnBounds="true" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
+      <ImageView fx:id="_ivCard2" fitHeight="80.0" fitWidth="60.0" layoutX="10.0" layoutY="10.0" onMouseClicked="#onClickCard" pickOnBounds="true" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="75.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
       <Label fx:id="_lbEquity" alignment="CENTER" layoutX="14.0" layoutY="105.0" text="Equity: 0%" wrapText="true" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" />
       <Button fx:id="_btFold" layoutX="73.0" layoutY="80.0" mnemonicParsing="false" onAction="#onClickFold" text="Fold" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" />
       <ImageView fx:id="_cardImg1" fitHeight="68.0" fitWidth="65.0" layoutX="-135.0" layoutY="-60.0" pickOnBounds="true" preserveRatio="true" />
