--- a/src/view/equity.fxml
+++ b/src/view/equity.fxml
@@ -15,42 +15,33 @@
       <AnchorPane fx:id="_pBoard" layoutX="14.0" layoutY="14.0" styleClass="basicPane" AnchorPane.bottomAnchor="250.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
          <children>
             <Ellipse fx:id="_eBoard" centerX="40.0" fill="#23c311" layoutX="620.0" layoutY="225.0" radiusX="580.0" radiusY="215.0" stroke="BLACK" strokeType="INSIDE" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0" />
-            <MenuButton fx:id="_mbtNumPlayers" layoutX="15.0" layoutY="15.0" mnemonicParsing="false" text="Num Players: 6" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="15.0">
-              <items>
-                <MenuItem mnemonicParsing="false" onAction="#onClickNumPlayers" text="1" />
-                  <MenuItem mnemonicParsing="false" onAction="#onClickNumPlayers" text="2" />
-                  <MenuItem mnemonicParsing="false" onAction="#onClickNumPlayers" text="3" />
-                  <MenuItem mnemonicParsing="false" onAction="#onClickNumPlayers" text="4" />
-                  <MenuItem mnemonicParsing="false" onAction="#onClickNumPlayers" text="5" />
-                  <MenuItem mnemonicParsing="false" onAction="#onClickNumPlayers" text="6" />
-                  <MenuItem mnemonicParsing="false" onAction="#onClickNumPlayers" text="7" />
-                  <MenuItem mnemonicParsing="false" onAction="#onClickNumPlayers" text="8" />
-                  <MenuItem mnemonicParsing="false" onAction="#onClickNumPlayers" text="9" />
-              </items>
-            </MenuButton>
-            <Label fx:id="_lbNumSimu" layoutX="15.0" layoutY="400.0" maxWidth="300.0" text="Num Simu: 0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0">
+            <Label fx:id="_lbNumSimu" layoutX="15.0" layoutY="400.0" maxWidth="300.0" text="Num. Simulations: 0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0">
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
             </Label>
-            <HBox fx:id="_hbBoardCards" layoutX="535.0" layoutY="185.0" prefHeight="80.0" prefWidth="270.0" styleClass="boardCardsHB" AnchorPane.leftAnchor="535.0" AnchorPane.rightAnchor="433.0" AnchorPane.topAnchor="180.0">
+            <HBox fx:id="_hbBoardCards" layoutX="535.0" layoutY="185.0" onMouseClicked="#onClickBoardCards" prefHeight="80.0" prefWidth="260.0" styleClass="boardCardsHB" AnchorPane.leftAnchor="535.0" AnchorPane.topAnchor="180.0">
                <children>
                   <ImageView cache="true" fitHeight="85.0" fitWidth="50.0" pickOnBounds="true">
                      <HBox.margin>
                         <Insets right="5.0" />
-                     </HBox.margin></ImageView>
+                     </HBox.margin>
+                  </ImageView>
+                  <ImageView cache="true" fitHeight="85.0" fitWidth="50.0" onMousePressed="#onClickBoardCards" pickOnBounds="true">
+                     <HBox.margin>
+                        <Insets right="5.0" />
+                     </HBox.margin>
+                  </ImageView>
                   <ImageView cache="true" fitHeight="85.0" fitWidth="50.0" pickOnBounds="true">
                      <HBox.margin>
                         <Insets right="5.0" />
-                     </HBox.margin></ImageView>
+                     </HBox.margin>
+                  </ImageView>
                   <ImageView cache="true" fitHeight="85.0" fitWidth="50.0" pickOnBounds="true">
                      <HBox.margin>
                         <Insets right="5.0" />
-                     </HBox.margin></ImageView>
-                  <ImageView cache="true" fitHeight="85.0" fitWidth="50.0" pickOnBounds="true">
-                     <HBox.margin>
-                        <Insets right="5.0" />
-                     </HBox.margin></ImageView>
+                     </HBox.margin>
+                  </ImageView>
                   <ImageView cache="true" fitHeight="85.0" fitWidth="50.0" pickOnBounds="true" />
                </children>
             </HBox>
@@ -67,13 +58,26 @@
             <Button fx:id="_btPhase" layoutX="17.0" layoutY="74.0" mnemonicParsing="false" onAction="#onClickNextPhase" text="Next Phase" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="50.0" />
             <Button layoutX="17.0" layoutY="107.0" mnemonicParsing="false" onAction="#onClickClear" text="Clear" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="100.0" />
             <Button fx:id="_btCalculate" layoutX="142.0" layoutY="52.0" mnemonicParsing="false" onAction="#onClickCalculate" text="Calculate Equity" />
-            <Button fx:id="_btStop" layoutX="142.0" layoutY="102.0" mnemonicParsing="false" onAction="#onClickStop" text="Stop Simulation" />
+            <Button fx:id="_btStop" disable="true" layoutX="142.0" layoutY="102.0" mnemonicParsing="false" onAction="#onClickStop" text="Stop Simulation" />
             <Label alignment="CENTER" layoutX="306.0" layoutY="105.0" text="Stop Limit: ">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
             <TextField fx:id="_tfStopLimit" alignment="CENTER" layoutX="386.0" layoutY="102.0" prefHeight="31.0" prefWidth="126.0" text="2000000" />
+            <MenuButton fx:id="_mbtNumPlayers" layoutX="299.0" layoutY="50.0" mnemonicParsing="false" text="Num Players: 6" AnchorPane.leftAnchor="299.0" AnchorPane.topAnchor="50.0">
+              <items>
+                <MenuItem mnemonicParsing="false" onAction="#onClickNumPlayers" text="1" />
+                  <MenuItem mnemonicParsing="false" onAction="#onClickNumPlayers" text="2" />
+                  <MenuItem mnemonicParsing="false" onAction="#onClickNumPlayers" text="3" />
+                  <MenuItem mnemonicParsing="false" onAction="#onClickNumPlayers" text="4" />
+                  <MenuItem mnemonicParsing="false" onAction="#onClickNumPlayers" text="5" />
+                  <MenuItem mnemonicParsing="false" onAction="#onClickNumPlayers" text="6" />
+                  <MenuItem mnemonicParsing="false" onAction="#onClickNumPlayers" text="7" />
+                  <MenuItem mnemonicParsing="false" onAction="#onClickNumPlayers" text="8" />
+                  <MenuItem mnemonicParsing="false" onAction="#onClickNumPlayers" text="9" />
+              </items>
+            </MenuButton>
          </children></AnchorPane>
    </children>
 </AnchorPane>
