--- a/src/view/equity.fxml
+++ b/src/view/equity.fxml
@@ -20,29 +20,29 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
             </Label>
-            <HBox fx:id="_hbBoardCards" layoutX="524.0" layoutY="182.0" onMouseClicked="#onClickBoardCards" prefHeight="80.0" prefWidth="260.0" styleClass="boardCardsHB" AnchorPane.leftAnchor="524.0" AnchorPane.topAnchor="180.0">
+            <HBox fx:id="_hbBoardCards" layoutX="524.0" layoutY="182.0" onMouseClicked="#onClickBoardCards" prefHeight="70.0" prefWidth="260.0" spacing="5.0" styleClass="boardCardsHB" AnchorPane.leftAnchor="520.0" AnchorPane.topAnchor="190.0">
                <children>
-                  <ImageView cache="true" fitHeight="85.0" fitWidth="50.0" pickOnBounds="true">
+                  <ImageView cache="true" fitHeight="73.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                      <HBox.margin>
                         <Insets right="5.0" />
                      </HBox.margin>
                   </ImageView>
-                  <ImageView cache="true" fitHeight="85.0" fitWidth="50.0" onMousePressed="#onClickBoardCards" pickOnBounds="true">
+                  <ImageView cache="true" fitHeight="73.0" fitWidth="50.0" onMousePressed="#onClickBoardCards" pickOnBounds="true" preserveRatio="true">
                      <HBox.margin>
                         <Insets right="5.0" />
                      </HBox.margin>
                   </ImageView>
-                  <ImageView cache="true" fitHeight="85.0" fitWidth="50.0" pickOnBounds="true">
+                  <ImageView cache="true" fitHeight="73.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                      <HBox.margin>
                         <Insets right="5.0" />
                      </HBox.margin>
                   </ImageView>
-                  <ImageView cache="true" fitHeight="85.0" fitWidth="50.0" pickOnBounds="true">
+                  <ImageView cache="true" fitHeight="73.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                      <HBox.margin>
                         <Insets right="5.0" />
                      </HBox.margin>
                   </ImageView>
-                  <ImageView cache="true" fitHeight="85.0" fitWidth="50.0" pickOnBounds="true" />
+                  <ImageView cache="true" fitHeight="73.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </HBox>
             <MenuButton fx:id="_mbtGameMode" alignment="CENTER" layoutX="18.0" layoutY="13.0" mnemonicParsing="false" text="NLHE" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="1128.0" AnchorPane.topAnchor="10.0">
@@ -65,24 +65,24 @@
             </MenuButton>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="20.0" layoutY="490.0" prefHeight="200.0" prefWidth="200.0" styleClass="controlPane" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="490.0">
+      <TextArea fx:id="_taLog" editable="false" styleClass="basicPane" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="850.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="500.0" />
+      <AnchorPane layoutX="20.0" layoutY="490.0" prefHeight="205.0" prefWidth="500.0" styleClass="controlPane" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0">
          <children>
-            <Label fx:id="_lTitle" alignment="CENTER" layoutX="603.0" layoutY="14.0" text="The PreFlop" underline="true" AnchorPane.bottomAnchor="160.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="5.0">
+            <Label fx:id="_lTitle" alignment="CENTER" contentDisplay="CENTER" layoutX="603.0" layoutY="14.0" text="The PreFlop" underline="true" AnchorPane.bottomAnchor="160.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="5.0">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font>
             </Label>
-            <TextArea fx:id="_taLog" editable="false" layoutX="923.0" layoutY="5.0" styleClass="basicPane" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="770.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="50.0" />
-            <Button fx:id="_btPhase" layoutX="17.0" layoutY="74.0" mnemonicParsing="false" onAction="#onClickNextPhase" text="Next Phase" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="50.0" />
-            <Button layoutX="17.0" layoutY="107.0" mnemonicParsing="false" onAction="#onClickClear" text="Clear" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="100.0" />
-            <Button fx:id="_btCalculate" layoutX="142.0" layoutY="52.0" mnemonicParsing="false" onAction="#onClickCalculate" text="Calculate Equity" />
-            <Button fx:id="_btStop" disable="true" layoutX="142.0" layoutY="102.0" mnemonicParsing="false" onAction="#onClickStop" text="Stop Simulation" />
-            <Label alignment="CENTER" layoutX="306.0" layoutY="105.0" text="Stop Limit: ">
+            <Button fx:id="_btPhase" layoutX="17.0" layoutY="74.0" mnemonicParsing="false" onAction="#onClickNextPhase" text="Next Phase" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="380.0" AnchorPane.topAnchor="70.0" />
+            <Button layoutX="17.0" layoutY="107.0" mnemonicParsing="false" onAction="#onClickClear" text="Clear" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="380.0" AnchorPane.topAnchor="110.0" />
+            <Button fx:id="_btCalculate" layoutX="243.0" layoutY="62.0" mnemonicParsing="false" onAction="#onClickCalculate" text="Calculate Equity" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="70.0" />
+            <Button fx:id="_btStop" disable="true" layoutX="403.0" layoutY="62.0" mnemonicParsing="false" onAction="#onClickStop" text="Stop Simulation" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="70.0" />
+            <Label alignment="CENTER" layoutX="489.0" layoutY="142.0" text="Stop Limit: " AnchorPane.rightAnchor="170.0" AnchorPane.topAnchor="125.0">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
-            <TextField fx:id="_tfStopLimit" alignment="CENTER" layoutX="386.0" layoutY="102.0" prefHeight="31.0" prefWidth="126.0" text="2000000" />
+            <TextField fx:id="_tfStopLimit" alignment="CENTER" layoutX="569.0" layoutY="139.0" prefHeight="31.0" prefWidth="126.0" promptText="Default: 0" AnchorPane.rightAnchor="45.0" AnchorPane.topAnchor="120.0" />
          </children></AnchorPane>
    </children>
 </AnchorPane>
