--- a/src/view/equity.fxml
+++ b/src/view/equity.fxml
@@ -65,7 +65,7 @@
             </MenuButton>
          </children>
       </AnchorPane>
-      <TextArea fx:id="_taLog" editable="false" styleClass="basicPane" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="850.0" AnchorPane.rightAnchor="20.0" />
+      <TextArea fx:id="_taLog" editable="false" styleClass="basicPane" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="850.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="505.0" />
       <AnchorPane layoutX="20.0" layoutY="490.0" prefWidth="500.0" styleClass="controlPane" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0">
          <children>
             <Label fx:id="_lTitle" alignment="CENTER" contentDisplay="CENTER" layoutX="603.0" layoutY="14.0" text="The PreFlop" underline="true" AnchorPane.bottomAnchor="160.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="5.0">
@@ -82,7 +82,7 @@
                   <Font size="16.0" />
                </font>
             </Label>
-            <TextField fx:id="_tfStopLimit" alignment="CENTER" layoutX="569.0" layoutY="139.0" prefHeight="31.0" prefWidth="126.0" promptText="0 to infinity" AnchorPane.rightAnchor="45.0" AnchorPane.topAnchor="120.0" />
+            <TextField fx:id="_tfStopLimit" alignment="CENTER" layoutX="569.0" layoutY="139.0" prefHeight="31.0" prefWidth="126.0" promptText="0 to infinity" text="2000000" AnchorPane.rightAnchor="45.0" AnchorPane.topAnchor="120.0" />
          </children></AnchorPane>
    </children>
 </AnchorPane>
